# wasabi

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  audit.toml
.github/workflows/: rust-ci.yml
src/: lib.rs
src/aws/: dynamodb.rs  mod.rs  s3.rs
src/aws/dynamodb/: client.rs  schema.rs
src/config/: client.rs  descriptor.rs  manager.rs  mod.rs  repository.rs
src/config/repository/: dynamo.rs
src/config/service/: elements.rs  features.rs  mod.rs  system.rs
src/logging/: console.rs  mod.rs  otel.rs  pretty.rs
src/tools/: i18n_string.rs  id_generator.rs  mod.rs  system.rs
src/web/: info.rs  mod.rs  user.rs  warp.rs
src/web/auth/: authenticator.rs  mod.rs  user.rs
wasabi-core/: Cargo.toml
wasabi-core/src/: lib.rs
wasabi-core/src/aws/: bedrock.rs  mod.rs  s3.rs
wasabi-core/src/aws/dynamodb/: client.rs  mod.rs  schema.rs
wasabi-core/src/config/: client.rs  descriptor.rs
wasabi-core/src/config/repository/: mod.rs
wasabi-core/src/config/service/: elements.rs  features.rs  mod.rs  system.rs
wasabi-core/src/events/: README.md  firehose.rs  mod.rs
wasabi-core/src/logging/: mod.rs  otel.rs  pretty.rs  production.rs
wasabi-core/src/opensearch/: mod.rs
wasabi-core/src/scripts/: mod.rs
wasabi-core/src/scripts/compiler/: ast.rs  context.rs  mod.rs  parser.rs  span.rs  tokenizer.rs  transformer.rs
wasabi-core/src/scripts/env/: engine.rs  function.rs  mod.rs
wasabi-core/src/scripts/eval/: context.rs  error.rs  mod.rs  node.rs
wasabi-core/src/scripts/value/: boolean.rs  core.rs  list.rs  mod.rs  number.rs  string.rs
wasabi-core/src/tools/: README.md  dotenv.rs  i18n_string.rs  id_generator.rs  mod.rs  system.rs  watch.rs
wasabi-core/src/web/: README.md  error.rs  favicon_service.rs  info_service.rs  mod.rs  user_info_service.rs  validation.rs  warp.rs
wasabi-core/src/web/auth/: README.md  authenticator.rs  claim_transformer.rs  github_oidc.rs  jwks.rs  mod.rs  user.rs
wasabi-core/src/web/pdf/: error.rs  mod.rs  schemes.rs  warp.rs  world.rs
wasabi-macro/: Cargo.toml
wasabi-macro/src/: lib.rs
