[package]
name = "wasabi"
version = "0.3.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
futures-util = "0.3"
tokio-util = "0.7"
warp = "0.3"
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
chrono = { version = "0.4", features = ["serde"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1.82.0", optional = true }
aws-sdk-dynamodb = { version = "1.71.0", optional = true }
serde_dynamo = { version = "4.2", optional = true, features = ["aws-sdk-dynamodb+1"] }
nanoid = { version = "0.4", optional = true }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
tracing-opentelemetry = { version = "0.30", optional = true }
opentelemetry = { version = "0.29", optional = true }
opentelemetry-otlp = { version = "0.29", features = ["tonic", "grpc-tonic"], optional = true }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"], optional = true }
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
nu-ansi-term = { version = "0.50", optional = true }
rand = "0.9.0"

[features]
default = []
pretty_logs = ["nu-ansi-term"]
open_telemetry = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]
aws_s3 = ["aws-config", "aws-sdk-s3"]
aws_dynamodb = ["aws-config", "aws-sdk-dynamodb", "serde_dynamo", "nanoid"]